ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Requires_Pre_Approval_Formula__c.field-meta.xml
<CustomField>
    <fullName>Requires_Pre_Approval_Formula__c</fullName>
    <description>Pre-Approval is required depending on Claim Category</description>
    <formula>CASE(TEXT( Reimbursement_Items__c ), 
&quot;Additional Salesforce License Fees for ROOFPRO Contractor Portal&quot;,&quot;No&quot;,
&quot;Digital Advertising&quot;,&quot;Yes&quot;,
&quot;Direct Mail&quot;,&quot;Yes&quot;,
&quot;Extended Iron Clad Protection Period Fees&quot;,&quot;No&quot;,
&quot;Literature&quot;,&quot;Yes&quot;,
&quot;Personalized Promotional Items&quot;,&quot;Yes&quot;,
&quot;Premiums items and wearables&quot;,&quot;Yes&quot;,
&quot;Print Advertising, Yellow Pages and Billboards&quot;,&quot;Yes&quot;,
&quot;Program Membership Fees&quot;,&quot;No&quot;,
&quot;Program Partners’ Services&quot;,&quot;No&quot;,
&quot;Radio and TV Advertising&quot;,&quot;Yes&quot;,
&quot;Samples &amp; Displays&quot;,&quot;Yes&quot;,
&quot;Showroom Racks &amp; Wall Display Materials&quot;,&quot;No&quot;,
&quot;Tradeshows and Home shows&quot;,&quot;No&quot;,
&quot;Training&quot;,&quot;Yes&quot;,
&quot;Travel to IKO ROOFPRO Profit Power Workshops&quot;,&quot;No&quot;,
&quot;Truck Wraps and Graphics&quot;,&quot;Yes&quot;, &quot;N/A&quot;)</formula>
    <label>Requires Pre-Approval</label>
    <type>Text</type>
</CustomField>