ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Requires_Pre_Approval_Formula_Display__c.field-meta.xml
<CustomField>
    <fullName>Requires_Pre_Approval_Formula_Display__c</fullName>
    <description>Formula to display correct value in appropriate language (taken from value in Requires PreApproval formula field).</description>
    <formula>CASE( Requires_Pre_Approval_Formula__c , 
&apos;Yes&apos;, 
 CASE( Contractor_Language__c , &quot;Quebec French&quot;, &quot;Oui&quot;, &quot;Spanish&quot;, &quot;Sí&quot;, &quot;Yes&quot;) , 

&apos;No&apos;, 
 CASE(Contractor_Language__c , &quot;Quebec French&quot;, &quot;Non&quot;, &quot;No&quot;) ,

&apos;&apos;)</formula>
    <label>Requires Pre-Approval</label>
    <type>Text</type>
</CustomField>