ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status visible to Contractor.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Preapproval</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete Draft</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Payment Mailed</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Submitted Claim Pre-Approval</fullName>
            </value>
            <value>
                <fullName>Claim Pre-Approval Approved</fullName>
            </value>
            <value>
                <fullName>Claim Pre-Approval Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>