ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <description>Used as part of the &apos;Approval Status&apos;-formula field</description>
    <formula>CASE( Contractor_Language__c , 

&quot;Quebec French&quot;, 
CASE(TEXT(Status__c), 
&quot;Not Approved&quot;, &quot;Non approuvée&quot;, 
&quot;Payment Mailed&quot;, &quot;Paiement envoyé&quot;, 
&quot;En traitement&quot;),

&quot;Spanish&quot;, 
CASE(TEXT(Status__c), 
&quot;Not Approved&quot;, &quot;No aprovado&quot;, 
&quot;Payment Mailed&quot;, &quot;Pago enviado por correo&quot;, 
&quot;Tratamiento&quot;),

TEXT(Status__c)
)</formula>
    <label>Status Formula</label>
    <type>Text</type>
</CustomField>