ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>This field is created for OFM/IMT. No use in Salesforce.</description>
    <formula>CreatedBy.Email</formula>
    <label>User Email</label>
    <type>Text</type>
</CustomField>