ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/User_FirstName__c.field-meta.xml
<CustomField>
    <fullName>User_FirstName__c</fullName>
    <description>This field is created for OFM/IMT. No use in Salesforce.</description>
    <formula>CreatedBy.FirstName</formula>
    <label>User FirstName</label>
    <type>Text</type>
</CustomField>