ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/User_LastName__c.field-meta.xml
<CustomField>
    <fullName>User_LastName__c</fullName>
    <description>This field is created for OFM/IMT. No use in Salesforce.</description>
    <formula>CreatedBy.LastName</formula>
    <label>User LastName</label>
    <type>Text</type>
</CustomField>