ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <description>This field is created for OFM/IMT. No use in Salesforce.</description>
    <formula>CreatedBy.Phone</formula>
    <label>User Phone</label>
    <type>Text</type>
</CustomField>