ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/fields/Year_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Year_Submitted__c</fullName>
    <formula>YEAR( Date_Submitted__c )</formula>
    <label>Year Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>