ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/recordTypes/Approved_Reimbursement_Claim.recordType-meta.xml
<RecordType>
    <fullName>Approved_Reimbursement_Claim</fullName>
    <active>false</active>
    <label>Approved Reimbursement Claim</label>
</RecordType>