ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/recordTypes/ROOFPRO_Claim_Being_Processed.recordType-meta.xml
<RecordType>
    <fullName>ROOFPRO_Claim_Being_Processed</fullName>
    <active>true</active>
    <description>Record Type for Submitted Claim (either in Approval or Approved, but no payment mailed, yet)</description>
    <label>ROOFPRO Claim Being Processed</label>
</RecordType>