ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/recordTypes/ROOFPRO_Claim_Decided.recordType-meta.xml
<RecordType>
    <fullName>ROOFPRO_Claim_Decided</fullName>
    <active>true</active>
    <description>Record Type when a claim has been approved or rejected.</description>
    <label>ROOFPRO Claim Decided</label>
</RecordType>