ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/recordTypes/ROOFPRO_New_Claim.recordType-meta.xml
<RecordType>
    <fullName>ROOFPRO_New_Claim</fullName>
    <active>true</active>
    <description>Record Type for New Claim (not yet submitted for Approval)</description>
    <label>ROOFPRO New Claim</label>
</RecordType>