ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/recordTypes/ROOFPRO_New_Preapproval_Request.recordType-meta.xml
<RecordType>
    <fullName>ROOFPRO_New_Preapproval_Request</fullName>
    <active>true</active>
    <description>New Preapproval Request</description>
    <label>ROOFPRO New Preapproval Request</label>
</RecordType>