ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/recordTypes/ROOFPRO_Submitted_Preapproval_Request.recordType-meta.xml
<RecordType>
    <fullName>ROOFPRO_Submitted_Preapproval_Request</fullName>
    <active>true</active>
    <description>Submitted Preapproval Request</description>
    <label>ROOFPRO Submitted Preapproval Request</label>
</RecordType>