ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/validationRules/Claim_Amount_Greater_than_25.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Amount_Greater_than_25</fullName>
    <active>true</active>
    <errorConditionFormula>Claim_Amount__c &lt; 25</errorConditionFormula>
    <errorDisplayField>Claim_Amount__c</errorDisplayField>
    <errorMessage>Your Claim Amount should be greater than $25.</errorMessage>
</ValidationRule>