ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/validationRules/Net_Amount_Less_than_Available_Coop.validationRule-meta.xml
<ValidationRule>
    <fullName>Net_Amount_Less_than_Available_Coop</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND(YEAR(Date_Submitted__c) == YEAR(TODAY()),NOT( Approved_by_Loyalty_Admin__c ),Net_Claim_Amount__c &gt; Contractor__r.Available_COOP_Funds__c),true, false)</errorConditionFormula>
    <errorMessage>Net Reimbursable Amount cannot be greater than the Available Coop Funds.</errorMessage>
</ValidationRule>