ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>NAME</columns>
    <columns>Contractor__c</columns>
    <columns>Reimbursement_Items__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Prior_Year_Claim__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Payment_Reference_No__c</columns>
    <columns>Net_Claim_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requires_Pre_Approval_Formula_Display__c</columns>
    <columns>Requires_Pre_Approval_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contractor__c</field>
        <operation>notContain</operation>
        <value>Contractor TEST01</value>
    </filters>
    <label>All Claims</label>
    <sharedTo>
        <role>IKOPRO_Loyalty_Admin</role>
    </sharedTo>
</ListView>