ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/listViews/Loyalty_Admins_CA_Reimbursement_Claims.listView-meta.xml
<ListView>
    <fullName>Loyalty_Admins_CA_Reimbursement_Claims</fullName>
    <columns>NAME</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Reimbursement_Items__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Contractor__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>RC_Present_Tier__c</columns>
    <filterScope>Queue</filterScope>
    <label>Loyalty Admins CA</label>
    <queue>Loyalty_Admins_CA</queue>
    <sharedTo>
        <group>Loyalty_Team</group>
    </sharedTo>
</ListView>