ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/listViews/Reimbursement_Claims_External_EN.listView-meta.xml
<ListView>
    <fullName>Reimbursement_Claims_External_EN</fullName>
    <columns>NAME</columns>
    <columns>Amount_Date__c</columns>
    <columns>Reimbursement_Items__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>