ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/listViews/Reimbursement_Claims_External_ES.listView-meta.xml
<ListView>
    <fullName>Reimbursement_Claims_External_ES</fullName>
    <columns>NAME</columns>
    <columns>Amount_Date__c</columns>
    <columns>Reimbursement_Items__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las reclamaciones</label>
    <language>en_US</language>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
        <role>IKOPRO_Loyalty_Admin</role>
    </sharedTo>
</ListView>