ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/listViews/TESTVL.listView-meta.xml
<ListView>
    <fullName>TESTVL</fullName>
    <columns>NAME</columns>
    <columns>Contractor__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Reimbursement_Items__c</columns>
    <columns>Claim_Description__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Net_Claim_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reimbursement_Items__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>TESTVL</label>
    <language>en_US</language>
    <sharedTo>
        <role>IKOPRO_Loyalty_Admin</role>
    </sharedTo>
</ListView>