ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Reimbursement_Claims__c/listViews/Year_End_Claims.listView-meta.xml
<ListView>
    <fullName>Year_End_Claims</fullName>
    <columns>Reimbursement_Items__c</columns>
    <columns>Amount_Date__c</columns>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Internal_Status__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Final_Approval_On__c</columns>
    <columns>Final_Rejection_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prior_Year_Claim__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Year End Claims</label>
    <language>en_US</language>
    <sharedTo>
        <role>IKOPRO_Loyalty_Admin</role>
    </sharedTo>
</ListView>